--- a/content/posts/introduction-to-mdx.mdx
+++ b/content/posts/introduction-to-mdx.mdx
@@ -1,7 +1,7 @@
 ---
   title: Introduction to MDX
   summary: MDX is a powerful tool that allows you to write JSX in your Markdown files. This post will introduce you to the basics of MDX.
-  image: /images/posts/introduction-to-mdx.webp
+  image: ''
   author: 'Hamed Bahram'
   publishedAt: '2024-08-08'
 ---
@@ -29,8 +29,6 @@ MDX is a great way to write interactive documentation, blog posts, and other
 content that requires more than just plain text. By using MDX, you can easily
 embed interactive components, code snippets, and other dynamic content in your
 Markdown files.
-
-<Counter />
 
 ## How to use MDX
 
