--- a/content/posts/introduction-to-mdx.mdx
+++ b/content/posts/introduction-to-mdx.mdx
@@ -1,7 +1,7 @@
 ---
   title: Introduction to MDX
   summary: MDX is a powerful tool that allows you to write JSX in your Markdown files. This post will introduce you to the basics of MDX.
-  image: ''
+  image: /images/posts/introduction-to-mdx.webp
   author: 'Hamed Bahram'
   publishedAt: '2024-08-08'
 ---
@@ -31,6 +31,8 @@ embed interactive components, code snippets, and other dynamic content in your
 Markdown files.
 
 ## How to use MDX
+
+<Counter/>
 
 To use MDX, you need to install a plugin for your static site generator or build
 tool. For example, if you're using Gatsby, you can use the `gatsby-plugin-mdx`
