--- a/content/posts/introduction-to-nextjs.mdx
+++ b/content/posts/introduction-to-nextjs.mdx
@@ -2,7 +2,7 @@
   title: Introduction to NextJs
   summary: NextJs is a powerful React framework that makes it easy to build server-rendered React applications. This post will introduce you to the basics of NextJs.
   image: /images/posts/introduction-to-nextjs.webp
-  author: 'Hamed Bahram'
+  author: 'Paul Alwin'
   publishedAt: '2024-08-10'
 ---
 
