--- a/content/projects/ecommerce-store.mdx
+++ b/content/projects/ecommerce-store.mdx
@@ -2,7 +2,7 @@
   title: Ecommerce Store
   summary: A full-stack ecommerce store built with NextJs and Stripe.
   image: /images/projects/ecommerce-store.jpg
-  author: 'Hamed Bahram'
+  author: 'Paul Alwin'
   publishedAt: '2024-08-04'
 ---
 
