--- a/content/posts/introduction-to-mdx.mdx
+++ b/content/posts/introduction-to-mdx.mdx
@@ -2,7 +2,7 @@
   title: Introduction to MDX
   summary: MDX is a powerful tool that allows you to write JSX in your Markdown files. This post will introduce you to the basics of MDX.
   image: /images/posts/introduction-to-mdx.webp
-  author: 'Hamed Bahram'
+  author: 'Paul Alwin'
   publishedAt: '2024-08-08'
 ---
 
