--- a/content/projects/todo-app.mdx
+++ b/content/projects/todo-app.mdx
@@ -6,5 +6,15 @@
   publishedAt: '2025-03-29'
 ---
 
-Just a simple to-do app to get the basics of React.
+Just a simple to-do app I made following a tutorial, to help me understand the basics of React. 
+
 <ToDoApp />
+
+## Following are the basic react concepts I used for it.
+
+- Basic React Hooks like UseEffect and UseState.
+- Refactoring the app into smaller components. 
+- Sharing data between components using Props. 
+
+The source code for the components can be found in the components/todo-app folder in the 
+<a href="https://github.com/paulalwin91/my-portfolio-website.git" target="_blank">source-code</a>.
